| Bug #49447 | some gramatical and typographical problems in client utilities --help output | ||
|---|---|---|---|
| Submitted: | 4 Dec 2009 5:23 | Modified: | 17 Jun 2010 22:53 |
| Reporter: | Shane Bester (Platinum Quality Contributor) | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Command-line Clients | Severity: | S3 (Non-critical) |
| Version: | 5.1.41, all | OS: | Any |
| Assigned to: | Staale Smedseng | CPU Architecture: | Any |
[4 Dec 2009 5:23]
Shane Bester
[4 Dec 2009 6:15]
Sveta Smirnova
Thank you for the report. Verified as described.
[29 Jan 2010 11:53]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/98605 3334 Staale Smedseng 2010-01-29 Bug #49447 some gramatical and typographical problems in client utilities --help output Some cleanup of the --help output of our client apps as well as mysqld --help: * Typos corrected. * Changes in punctuation: Sentences are terminated with a period, exclamation marks are removed and some commas are added. * SQL keywords are capitalized, without any quotes. * Semicolon in a sentence is not followed by a capital letter. * The word SQL is all-caps. * A few sentences already touched by the above have also been simplified.
[2 Feb 2010 13:01]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/98938 3334 Staale Smedseng 2010-02-02 Bug #49447 some gramatical and typographical problems in client utilities --help output Some cleanup of the --help output of our client apps as well as mysqld --help: * Typos corrected. * Changes in punctuation: Sentences are terminated with a period, exclamation marks are removed and some commas are added. * SQL keywords are capitalized, without any quotes. * Semicolon in a sentence is not followed by a capital letter. * The word SQL is all-caps. * A few sentences already touched by the above have also been simplified.
[4 Feb 2010 11:59]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/99253 3355 Staale Smedseng 2010-02-04 Bug #49447 some gramatical and typographical problems in client utilities --help output Some cleanup of the --help output of our client apps as well as mysqld --help: * Typos corrected. * Changes in punctuation: Sentences are terminated with a period, exclamation marks are removed and some commas are added. * SQL keywords are capitalized, without any quotes. * Semicolon in a sentence is not followed by a capital letter. * The word SQL is all-caps. * A few sentences already touched by the above have also been simplified.
[4 Feb 2010 12:40]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/99270 3355 Staale Smedseng 2010-02-04 Recommit of Bug#49447.
[1 Mar 2010 8:44]
Bugs System
Pushed into 5.1.45 (revid:joro@sun.com-20100301083827-xnimmrjg6bh33o1o) (version source revid:joerg@mysql.com-20100212173307-ph563zr4wmoklgwd) (merge vers: 5.1.45) (pib:16)
[2 Mar 2010 14:35]
Bugs System
Pushed into 6.0.14-alpha (revid:alik@sun.com-20100302142746-u1gxdf5yk2bjrq3e) (version source revid:alik@sun.com-20100301190251-iema5x6db433m99z) (merge vers: 6.0.14-alpha) (pib:16)
[2 Mar 2010 14:44]
Bugs System
Pushed into mysql-next-mr (revid:alik@sun.com-20100302072432-k8xvfkgcggkwgi94) (version source revid:alik@sun.com-20100224135227-rcqs9pe9b2in80pf) (pib:16)
[8 Mar 2010 1:35]
Paul DuBois
Cosmetic changes. No changelog entry needed.
[26 Mar 2010 8:20]
Bugs System
Pushed into 5.5.4-m3 (revid:alik@sun.com-20100326080914-2pz8ns984e0spu03) (version source revid:alexey.kopytov@sun.com-20100307164059-cri8typa32cypq0l) (merge vers: 5.5.3-m2) (pib:16)
[26 Mar 2010 8:24]
Bugs System
Pushed into mysql-next-mr (revid:alik@sun.com-20100326081116-m3v4l34yhr43mtsv) (version source revid:alik@sun.com-20100325072612-4sds00ix8ajo1e84) (pib:16)
[26 Mar 2010 15:52]
Paul DuBois
No changelog entry needed.
[6 Apr 2010 8:00]
Bugs System
Pushed into 5.1.46 (revid:sergey.glukhov@sun.com-20100405111026-7kz1p8qlzglqgfmu) (version source revid:staale.smedseng@sun.com-20100301134951-1so7n5vi7xu0brf0) (merge vers: 5.1.45) (pib:16)
[6 Apr 2010 13:27]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available version, including the bug fix. More information about accessing the source trees is available at
http://dev.mysql.com/doc/en/installing-source.html
[17 Jun 2010 11:52]
Bugs System
Pushed into 5.1.47-ndb-7.0.16 (revid:martin.skold@mysql.com-20100617114014-bva0dy24yyd67697) (version source revid:vasil.dimov@oracle.com-20100331130613-8ja7n0vh36a80457) (merge vers: 5.1.46) (pib:16)
[17 Jun 2010 12:30]
Bugs System
Pushed into 5.1.47-ndb-6.2.19 (revid:martin.skold@mysql.com-20100617115448-idrbic6gbki37h1c) (version source revid:martin.skold@mysql.com-20100609211156-tsac5qhw951miwtt) (merge vers: 5.1.46-ndb-6.2.19) (pib:16)
[17 Jun 2010 13:18]
Bugs System
Pushed into 5.1.47-ndb-6.3.35 (revid:martin.skold@mysql.com-20100617114611-61aqbb52j752y116) (version source revid:vasil.dimov@oracle.com-20100331130613-8ja7n0vh36a80457) (merge vers: 5.1.46) (pib:16)
