Recommit of Bug#49447.